--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       }
 
       // GF SPECIAL FEATURE
-      const gfNames = ["priya","sakshi","anushka","shruti","baby","jaan","ladki","gf","meri gf","my gf"];
+      const gfNames = ["parul", "chiku", "pratibha", "shiva ki lugai", "chillgozi",];
       const lower = city.toLowerCase();
 
       if(gfNames.includes(lower)){
@@ -142,4 +142,4 @@
     }
   </script>
 </body>
-</html>
+  </html>
